# Pleco

./: .appveyor.yml  .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TODO.md  appveyor.yml  typos.toml
.github/: CONTRIBUTING.md
.github/workflows/: test.yml
benches/: bench.rs  bit_benches.rs  board_benches.rs  board_clone_benches.rs  bot_benches.rs  eval_benches.rs  magic_benches.rs  move_gen_benches.rs  piece_loc_benches.rs  searcher_benches.rs  tt_benches.rs
examples/: README.md  basic_usage.rs
pleco/: Cargo.toml  LICENSE  README.md
pleco/benches/: bench_main.rs  bit_benches.rs  board_benches.rs  bot_benches.rs  eval_benches.rs  lookup_benches.rs  magic_benches.rs  move_gen_benches.rs  perft_benches.rs  piece_loc_benches.rs  searcher_benches.rs  tt_benches.rs
pleco/src/: bot_prelude.rs  engine.rs  lib.rs
pleco/src/board/: board_state.rs  castle_rights.rs  eval.rs  fen.rs  mod.rs  movegen.rs  perft.rs  pgn.rs  piece_locations.rs
pleco/src/bots/: alphabeta.rs  iterative_parallel_mvv_lva.rs  jamboree.rs  minimax.rs  mod.rs  parallel_minimax.rs
pleco/src/core/: bit_twiddles.rs  bitboard.rs  macros.rs  magic_helper.rs  masks.rs  mod.rs  mono_traits.rs  move_list.rs  piece_move.rs  score.rs  sq.rs
pleco/src/helper/: boards.rs  magic.rs  mod.rs  prelude.rs  psqt.rs  zobrist.rs
pleco/src/tools/: eval.rs  mod.rs  pawn_table.rs  pleco_arc.rs  prng.rs  timer.rs  tt.rs
pleco/tests/: basic_bots.rs  board_build.rs  board_hash.rs  board_move_apply.rs  board_properties.rs  fen_building.rs  move_generating.rs  pseudo_legal_checks.rs  test.rs  zobrist.rs
pleco_engine/: Cargo.toml  README.md
pleco_engine/benches/: bench_engine_main.rs  depth_benches.rs  eval_benches.rs  multimove_benches.rs  startpos_benches.rs  startup_bench.rs
pleco_engine/src/: consts.rs  engine.rs  lib.rs  main.rs
pleco_engine/src/endgame/: bitbases.rs  mod.rs
pleco_engine/src/movepick/: mod.rs  pick.rs
pleco_engine/src/pleco_searcher/: misc.rs  mod.rs  options.rs  parse.rs  root_moves.rs  search.rs  sync.rs  thread_search.rs  threads.rs  time_management.rs  uci_options.rs  uci_timer.rs
pleco_engine/src/pleco_searcher/rmoves/: mod.rs  root_moves_list.rs  root_moves_manager.rs
pleco_engine/src/pleco_searcher/root_moves/: mod.rs  root_moves_list.rs  root_moves_manager.rs
pleco_engine/src/root_moves/: mod.rs  root_moves_list.rs  root_moves_manager.rs
pleco_engine/src/search/: eval.rs  mod.rs  movepick.rs
pleco_engine/src/searcher/: eval.rs  mod.rs  search.rs  threads.rs
pleco_engine/src/sync/: mod.rs
pleco_engine/src/tables/: butterfly.rs  capture_piece_history.rs  continuation.rs  counter_move.rs  material.rs  mod.rs  pawn_table.rs
pleco_engine/src/threadpool/: mod.rs  threads.rs
pleco_engine/src/time/: mod.rs  time_management.rs  uci_timer.rs
pleco_engine/src/uci/: mod.rs  options.rs  parse.rs
pleco_engine/tests/: test_get_move.rs
py/: bit_string_creator.py  occupancy_mask_gen.py
src/: bit_twiddles.rs  board.rs  bot_advanced.rs  bot_alphabeta.rs  bot_expert.rs  bot_jamboree.rs  bot_minimax.rs  bot_parallel_minimax.rs  bot_prelude.rs  bot_random.rs  engine.rs  eval.rs  fen.rs  lib.rs  magic_helper.rs  main.rs  movegen.rs  piece_move.rs  templates.rs  timer.rs  tools.rs  transposition_table.rs  tt.rs  uci.rs  undo_move.rs
src/board/: board_state.rs  castle_rights.rs  eval.rs  mod.rs  movegen.rs  pgn.rs  piece_locations.rs
src/bots/: README.md  alphabeta_bot.rs  bot_advanced.rs  bot_alphabeta.rs  bot_expert.rs  bot_iterative_parallel_mvv_lva.rs  bot_jamboree.rs  bot_minimax.rs  bot_parallel_minimax.rs  bot_random.rs  eval.rs  jamboree.rs  jamboree_bot.rs  lazy_smp.rs  main_bot.rs  mod.rs  parallel_minimax_bot.rs  random_bot.rs  simple_bot.rs  threaded_searcher.rs  threaded_searcher_param.rs  transposition_table.rs
src/bots/basic/: bot_alphabeta.rs  bot_jamboree.rs  bot_minimax.rs  bot_parallel_minimax.rs  bot_random.rs  mod.rs
src/core/: bit_macros.rs  bit_twiddles.rs  bitboard.rs  magic_helper.rs  masks.rs  mod.rs  piece_move.rs  sq.rs  templates.rs
src/pleco_searcher/: _thread_search.rs  lazy_smp.rs  misc.rs  mod.rs  options.rs  search.rs  thread_search.rs  threadpool.rs  threads.rs  threads_test.rs
src/tools/: mod.rs  prng.rs  timer.rs  tt.rs
test/: test.rs
tests/: basic_bots.rs  bit_manipulations.rs  board_build.rs  board_move_apply.rs  fen_building.rs  init_move_generating.rs  magic.rs  move_generating.rs  test.rs
