[workspace]
members = [
    "pleco",
    "pleco_engine",
]

[profile.release]
opt-level = 3
debug = false
rpath = false
debug-assertions = false
panic = "panic"
codegen-units = 1
lto = true

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "panic"

[profile.test]
opt-level = 3
debug = true
rpath = false
debug-assertions = true
codegen-units = 4
panic = "unwind"

[dependencies]
clippy = {version = "0.0.174", optional = true}