[workspace]
members = [
    "pleco",
    "pleco_engine",
]

[profile.release]
opt-level = 3
debug = false
rpath = false
debug-assertions = false
codegen-units = 1
lto = true
panic = "unwind"

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "abort"

[profile.test]
opt-level = 3
debug = true
rpath = false
debug-assertions = true
codegen-units = 4


[dependencies]
clippy = {version = "0.0.174", optional = true}