[package]
name = "pleco"
version = "0.4.3"
authors = ["Stephen Fleischman <stephenf@cs.washington.edu>"]
description = "A blazingly-fast chess library."
homepage = "https://github.com/sfleischman105/Pleco"
documentation = "https://docs.rs/pleco/"
readme = "README.md"
keywords = ["chess","ai","engine","game","gaming"]
license = "MIT"
categories = ["games","game-engines"]
repository = "https://github.com/sfleischman105/Pleco"
autobenches = false


include = [
    "src/*",
    "tests/*.rs",
    "Cargo.toml",
    ".gitignore",
    "README.md",
]

[badges]
travis-ci = { repository = "sfleischman105/Pleco", branch = "master" }
coveralls = { repository = "sfleischman105/Pleco", branch = "master", service = "github" }

[lib]
name = "pleco"
#bench = true
path = "src/lib.rs"
doctest = true

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
panic = "unwind"
codegen-units = 1
lto = true

[profile.bench]
opt-level = 3
debug = false
lto = true
debug-assertions = false
codegen-units = 1

[profile.test]
opt-level = 3
debug = true
debug-assertions = true
codegen-units = 4


[dependencies]
clippy = {version = "0.0.302", optional = true}
bitflags = "1.0.4"
rand = "0.6.1"
rayon = "1.0.3"
num_cpus = "1.9.0"
prefetch = "0.2.0"
mucow = "0.1.0"

[dependencies.lazy_static]
version = "1.1.0"
features = ["nightly"]

[features]
default = []
dev = ["clippy"]

[dev-dependencies]
criterion = { version = '0.2.7', default-features = false, features=['real_blackbox'] }

[[bench]]
name = "bench_main"
harness = false
