[package]
name = "pleco"
version = "0.3.11"
authors = ["Stephen Fleischman <stephenf@cs.washington.edu>"]
description = "A blazingly-fast chess library."
homepage = "https://github.com/sfleischman105/Pleco"
documentation = "https://docs.rs/pleco/"
readme = "README.md"
keywords = ["chess","ai","engine","game","gaming"]
license = "MIT"
categories = ["games","game-engines"]
repository = "https://github.com/sfleischman105/Pleco"


include = [
    "src/*",
    "tests/*.rs",
    "Cargo.toml",
    ".gitignore",
    "README.md",
]

[badges]
travis-ci = { repository = "sfleischman105/Pleco", branch = "master" }
coveralls = { repository = "sfleischman105/Pleco", branch = "master", service = "github" }

[lib]
name = "pleco"
#bench = true
path = "src/lib.rs"
doctest = true

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
panic = "unwind"
codegen-units = 1
lto = true

[profile.bench]
opt-level = 3
debug = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "abort"

[profile.test]
opt-level = 3
debug = true
debug-assertions = true
codegen-units = 4
panic = "unwind"

[profile.doc]
opt-level = 0
debug = 2
rpath = false
lto = false
debug-assertions = true
codegen-units = 1
panic = "unwind"


[dependencies]
clippy = {version = "0.0.187", optional = true}
bitflags = "1.0.1"
rand = "0.4.2"
rayon = "1.0.0"
num_cpus = "1.8.0"
prefetch = "0.2.0"
mucow = "0.1.0"
unreachable = "1.0.0"

[dependencies.lazy_static]
version = "1.0.0"
features = ["nightly"]

[features]
default = []
dev = ["clippy"]

[dev-dependencies]
criterion = { version = '0.2', features=['real_blackbox'] }

[[bench]]
name = "bench_main"
harness = false
