[package]
name = "pleco_engine"
version = "0.1.3"
authors = ["Stephen Fleischman <stephenf@cs.washington.edu>"]
description = "A blazingly-fast Chess AI."
homepage = "https://github.com/sfleischman105/Pleco"
documentation = "https://docs.rs/pleco_engine/"
readme = "README.md"
keywords = ["chess","ai","engine","game","uci"]
license = "MIT"
categories = ["games","game-engines","command-line-utilities"]
repository = "https://github.com/sfleischman105/Pleco"
autobenches = false

include = [
    "src/*",
    "tests/*.rs",
    "Cargo.toml",
    ".gitignore",
    "README.md"
]

[badges]
travis-ci = { repository = "sfleischman105/Pleco", branch = "master" }
coveralls = { repository = "sfleischman105/Pleco", branch = "master", service = "github" }

#[profile.dev]
#opt-level = 3
#debug = true

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[profile.test]
opt-level = 3
debug = true
debug-assertions = true
codegen-units = 1

[lib]
name = "pleco_engine"
bench = true
path = "src/lib.rs"
doctest = true

[dependencies]
pleco = { path = "../pleco", version = "0.4.2" }
clippy = {version = "0.0.200", optional = true}
chrono = "0.4.4"
rand = "0.5.2"
num_cpus = "1.8.0"
prefetch = "0.2.0"
crossbeam-utils = "0.4.0"

[features]
default = []
dev = ["clippy"]

[[bin]]
name = "pleco"
path = "src/main.rs"
test = false
doc = false

[dev-dependencies]
criterion = {  version = '0.2.3', default-features = false, features=['real_blackbox'] }
lazy_static = {version = "1.0.0"}
#lazy_static = {version = "1.0.0", features = ["nightly"]}

[[bench]]
name = "bench_engine_main"
harness = false
