[package]
name = "pleco_engine"
version = "0.1.6"
authors = ["Stephen Fleischman <stephenf@cs.washington.edu>"]
description = "A blazingly-fast Chess AI."
homepage = "https://github.com/sfleischman105/Pleco"
documentation = "https://docs.rs/pleco_engine/"
readme = "README.md"
keywords = ["chess","ai","engine","game","uci"]
license = "GPL-3.0+"
categories = ["games","game-engines","command-line-utilities"]
repository = "https://github.com/sfleischman105/Pleco"
autobenches = false

include = [
    "src/*",
    "tests/*.rs",
    "Cargo.toml",
    ".gitignore",
    "README.md"
]

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[profile.test]
opt-level = 3
debug = true
debug-assertions = true
codegen-units = 1

[lib]
name = "pleco_engine"
bench = true
path = "src/lib.rs"
doctest = true

[dependencies]
pleco = { path = "../pleco", version = "0.5.0" }
chrono = "0.4.19"
rand = "0.8.5"
num_cpus = "1.13.1"

[features]
default = []

[[bin]]
name = "pleco"
path = "src/main.rs"
test = false
doc = false

[dev-dependencies]
criterion = {  version = '0.2.10', default-features = false }
lazy_static = {version = "1.3.0"}

[[bench]]
name = "bench_engine_main"
harness = false
